Fix Alignment and Button: Fix Navigation menu alignment on small screensizes. Reduce the Logo size to acommondate all items on the menu. Add history.goBack() on cancel button on the create review form.

--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -17,13 +17,23 @@
     color: #ec5656;
   }
 
-  @media (max-width: 768px) {
+  @media (max-width: 767px) {
     .Logo{
       max-height: 40px;
 
     }
     .NavLink {
       flex-direction:row;
+    }
+    }
+
+  @media (max-width: 280px) {
+    .NavLink {
+      margin: 0 0 0 0;
+      padding: 0;
+    }
+    .Logo{
+      max-height: 30px;
     }
     }
 
